fixed damaged layout when songtitle is too long when playing

--- a/static/style/style.css
+++ b/static/style/style.css
@@ -142,6 +142,8 @@ body {
     line-height: 30px !important;
     color: #fafafa;
     display: inline-block;
+    width: 400px;
+    overflow: auto;
 }
 
 #nowPlaying:hover {
